--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   },
   "homepage": "https://github.com/smiah4433/project2#readme",
   "dependencies": {
+    "dotenv": "^11.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.1.6"
+  },
+  "engines": {
+    "node": "16.3.0"
   }
 }
