--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/smiah4433/project2#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^11.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.1.6"
   },
